comparando string com instant data na consulta do mongodb